--- a/React/240528.md
+++ b/React/240528.md
@@ -23,8 +23,18 @@ function Footer() {
 };
 ```
 
+1. 하나의 컴포넌트는 반드시 최상위 태그 하나로 감싸야함.
 
-1. 모든 태그는 닫는 태그로 끝나야함 
+    ``<div>...</div> 또는 <>...</>``
+
+    ```jsx
+    <>
+      <h1>About</h1>
+      <p>Hello there.<br />How do you do?</p>
+    </>
+    ```
+
+2. 모든 태그는 닫는 태그로 끝나야함 
 
     ``<img> </img>``
     또는
@@ -32,13 +42,13 @@ function Footer() {
 
     닫는 태그가 원래 없는 경우
 
-    ``</br>``
+    ``<br />``
 
-2. 태그의 속성(Attribute) 는 CamelCase로 작성
+3. 태그의 속성(Attribute) 는 CamelCase로 작성
 
     ``<img className="image1">``
 
-3. 중괄호를 이용하여 JS표현식 삽입가능
+4. 중괄호를 이용하여 JS표현식 삽입가능
 
     ```jsx
     function Footer() {
