--- a/React/240530.md
+++ b/React/240530.md
@@ -31,7 +31,7 @@ Effetc를 작성하는법
 > SideEffect : 행위로 하여금 발생하는 파생효과
 
 ```jsx
-import { useEffect } from 'react
+import { useEffect } from 'react'
 ```
 
 ```jsx
@@ -50,6 +50,7 @@ import { useEffect } from 'react
 
 ```
 즉 , useEffect( 콜백함수,의존성배열) 형태로 작성
+
 의존성 배열의 상태가 변경될떄 마다 콜백함수 실행
 
 
@@ -59,7 +60,7 @@ function App() {
   const [input, setInput] = useState("");
 
   useEffect(() => {
-    console.log(`count:${count} input:${input}`);
+    console.log(`input:${input}`);
   }, [input]);
 
   return <input value={input} onChange={(e)=>{ setInput(e.target.value);}}>
