--- a/Javascript/240531.md
+++ b/Javascript/240531.md
@@ -127,6 +127,18 @@ console.log(foo); //12
 console.log(bar); //34
 ```
 
+- 객체에서 spread Operator
+> Spread 연산자를 이용하여 객체를 복사하거나 업데이트 가능하다 . 
+
+```js
+const user = { name: "kim", age: 25 };
+user = { ...user, city: "busan" };
+console.log(user); // {name: "kim", age : 25 , city: "busan" }
+
+user = { ...user, name: "park", city: "seoul" };
+console.log(user); // {name: "park", age : 25 , city: "seoul" }
+```
+
 ---
 
 ## Ref
