--- a/React_project_blog/240609_2.md
+++ b/React_project_blog/240609_2.md
@@ -4,19 +4,165 @@
 
 ### 나만의 블로그 만들기 프로젝트
 
-- 여는말
+- 기획
+ 
+    -기본 기능 요구사항
 
-[한입 크기로 잘라먹는 리액트](https://www.inflearn.com/course/%ED%95%9C%EC%9E%85-%EB%A6%AC%EC%95%A1%ED%8A%B8) 를 수강하고나서 배운점을 다시 리마인드 하고
+    1. 글/댓글 생성하기 (Create)
+    2. 글/댓글 읽기 (Read)
+    3. 글/댓글 수정하기 (Update)
+    4. 글/댓글 삭제하기 (Delete)
+    5. 메인페이지 구상
+    6. 상세페이지 구상
 
-더욱더 나를 발전시키기 위해 간단한 프로젝트부터  시작하려고 한다.
+- 메인페이지 구상
 
-그래서 마지막으로 배운 '감정일기장' 프로젝트와 유사하면서 조금더 몸집을 키울수 있는 프로젝트를 고민하던중 
+![](../img/스크린샷%202024-06-09%20오후%2012.26.35.png)
 
-**나만의 블로그**를 만들기로 결정하였다. 
+
+- 글작성 페이지
+
+    -필요기능
+    1. 제목과 내용 입력창
+    2. 제출버튼
+    3. 제출시 별도의 저장공간에 저장 (지금은 로컬스토리지 나중엔 DB로 구현예정)
+    4. 상태관리(글 작성페이지에서 작성한 내용은 여러 페이지에서 렌더링 될것이므로)
+
+1. 페이지라우팅
+
+```tsx
+//App.tsx
+
+function App() {
+
+  return (
+    <>
+      <Header />
+      <Routes>
+        <Route path="/" element={<HomePage />} />
+        <Route path="/write" element={<PostingPage />} />
+        <Route path="/about" element={<AboutPage />} />
+        <Route path="/list" element={<PostListPage />} />
+        <Route path="*" element={<NotFoundPage />} />
+      </Routes>
+    </>
+  );
+}
+
+```
+react-route-dom 을 이용하여 페이지에 따른 라우팅을 구현한다.
+
+2. 글 작성 페이지 구현
+
+```tsx
+
+import Form from "../component/Form";
+
+const PostingPage = () => {
+  return (
+    <>
+      <h2>글 쓰기</h2>
+      <Form />
+    </>
+  );
+};
+
+export default PostingPage;
+
+```
+내용을 작성하는 폼은 별도의 컴포넌트로 구성한다.
+
+3. 글 작성 폼 구현
+
+```tsx
+import { ChangeEvent, useState, useRef } from "react";
+
+const sampleData = [
+  {
+    postId: 0,
+    postDate: new Date().getTime(),
+    postTitle: "제목테스트",
+    postContent: "내용테스트",
+  },
+  {
+    postId: 1,
+    postDate: new Date().getTime(),
+    postTitle: "제목테스트2",
+    postContent: "내용테스트22",
+  },
+];
+
+const Form = () => {
+  const [postTitle, setPostTitle] = useState("");
+  const [postContent, setPostContent] = useState("");
+  const [posts, setPost] = useState(sampleData);
+  const postIdRef = useRef(2);
+
+  const onSubmit = (e: ChangeEvent<HTMLFormElement>) => {
+    e.preventDefault();
+
+    const newPost = {
+      postId: postIdRef.current++,
+      postDate: new Date().getTime(),
+      postTitle: postTitle,
+      postContent: postContent,
+    };
+
+    setPost([...posts, newPost]);
+    alert("작성완료!");
+    setPostTitle("");
+    setPostContent("");
+  };
+
+  return (
+    <form onSubmit={onSubmit}>
+      <input
+        type="text"
+        value={postTitle}
+        onChange={(e) => setPostTitle(e.target.value)}
+        placeholder="제목을 입력하세요"
+      />
+      <textarea
+        value={postContent}
+        onChange={(e) => setPostContent(e.target.value)}
+        placeholder="내용을 입력하세요"
+      />
+      <button type="submit">작성완료!</button>
+    </form>
+  );
+};
+export default Form;
+
+```
+---
+
+    1. 글의 제목과 글의 내용을 작성할 input 태그 구성
+    2. 각각의 input 태그에 이벤트 리스너 설정
+    3. 글의 제목과 글의 내용을 State로 저장.
+    4. 폼 제출 버튼 글릭시 기존 데이터 (지금은 샘플데이터)에
+        새로 작성한 제목과 내용, 그리고 글의 고유 id와 작성시간을 부여
 
 ---
 
-- 개발환경
+### 결과
 
-    - React18 + vite
-    - TypeScript 
+>샘플 데이터가 State에 정상적으로 저장된 것을 확인
+
+![](../img/스크린샷%202024-06-10%20오후%208.06.35.png)
+
+>Form 컴포넌트에 제목과 내용을 작성할 경우 State에 정상적으로 반영되는 것을 확인
+
+![](../img/스크린샷%202024-06-10%20오후%208.06.53.png)
+
+>Form 제출 할 경우 id와 작성시간, 그리고 작성해두었던 제목과 내용이 State에 저장된 것을 확인
+
+![](../img/스크린샷%202024-06-10%20오후%208.07.05.png)
+
+
+---
+
+### 개선할 점
+
+아직 posts State는 현재 Form 태그에 종속적이므로 전역적으로 관리해야함
+
+이를 위해서 Provider 및 Reducer ? 등 고민 해볼예정 
